--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "moduleResolution": "node",
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
