--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "moment": "2.22.2",
     "ngx-markdown": "^8.2.2",
+    "ng-recaptcha": "^6.0.2",
     "rxjs": "~6.4.0",
     "toco-lib": "0.0.3",
     "tslib": "^1.10.0",
