Set options for better performance.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,6 @@
     "emitDecoratorMetadata": true,
     "moduleResolution": "node",
     "module": "esnext",
-    "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": [
@@ -23,6 +22,7 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "preserveWhitespaces": false
   }
 }
