--- a/angular.json
+++ b/angular.json
@@ -50,6 +50,7 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
+              "subresourceIntegrity": true,
               "verbose": true,
               "budgets": [
                 {
