--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "2.22.2",
     "ng-recaptcha": "^6.1.0",
     "ngx-markdown": "^8.2.2",
+    "ngx-matomo": "^0.1.4",
     "rxjs": "~6.4.0",
     "toco-lib": "0.0.3",
     "tslib": "^1.10.0",
