--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "hammerjs": "^2.0.8",
     "moment": "2.22.2",
     "ng-recaptcha": "^6.1.0",
+    "ng-recaptcha-dynamic-language": "^1.0.1",
     "ngx-markdown": "^8.2.2",
     "ngx-matomo": "^0.1.4",
     "rxjs": "~6.4.0",
