--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ng-recaptcha-dynamic-language": "^1.0.1",
     "ngx-markdown": "^8.2.2",
     "ngx-matomo": "^0.1.4",
+    "ngx-translate": "0.0.1-security",
     "rxjs": "~6.4.0",
     "toco-lib": "0.0.3",
     "tslib": "^1.10.0",
