--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/node": "~8.9.4",
     "angular-in-memory-web-api": "^0.11.0",
     "codelyzer": "^5.0.0",
+    "gzipper": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^6.2.0",
@@ -71,6 +72,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "ng-packagr": "^5.4.0",
     "protractor": "~5.4.0",
+    "source-map-explorer": "^2.5.2",
     "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
     "tsickle": "^0.37.0",
