--- a/package.json
+++ b/package.json
@@ -39,13 +39,15 @@
     "express": "^4.15.2",
     "hammerjs": "^2.0.8",
     "moment": "2.22.2",
+    "ng": "0.0.0",
     "ng-recaptcha": "^6.1.0",
     "ng-recaptcha-dynamic-language": "^1.0.1",
     "ngx-markdown": "^8.2.2",
     "ngx-matomo": "^0.1.4",
     "ngx-translate": "0.0.1-security",
     "rxjs": "~6.4.0",
-    "toco-lib": "0.0.3",
+    "serve": "^13.0.2",
+    "toco-lib": "0.0.6",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
