--- a/package.json
+++ b/package.json
@@ -15,49 +15,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^9.1.15",
-    "@angular-devkit/schematics": "^9.1.15",
-    "@angular/animations": "~9.1.13",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.13",
-    "@angular/compiler": "~9.1.13",
-    "@angular/core": "~9.1.13",
-    "@angular/flex-layout": "^9.0.0-beta.31",
-    "@angular/forms": "~9.1.13",
-    "@angular/localize": "^9.1.13",
-    "@angular/material": "^9.2.4",
-    "@angular/material-moment-adapter": "^9.2.4",
-    "@angular/platform-browser": "~9.1.13",
-    "@angular/platform-browser-dynamic": "~9.1.13",
-    "@angular/platform-server": "~9.1.13",
-    "@angular/router": "~9.1.13",
-    "@nguniversal/express-engine": "^9.1.1",
-    "@nguniversal/module-map-ngfactory-loader": "v8.2.6",
+    "@angular-devkit/core": "^10.2.4",
+    "@angular-devkit/schematics": "^10.2.4",
+    "@angular/animations": "~10.2.5",
+    "@angular/cdk": "^10.2.7",
+    "@angular/common": "~10.2.5",
+    "@angular/compiler": "~10.2.5",
+    "@angular/core": "~10.2.5",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/forms": "~10.2.5",
+    "@angular/localize": "^10.2.5",
+    "@angular/material": "^10.2.7",
+    "@angular/material-moment-adapter": "^10.2.7",
+    "@angular/platform-browser": "~10.2.5",
+    "@angular/platform-browser-dynamic": "~10.2.5",
+    "@angular/platform-server": "~10.2.5",
+    "@angular/router": "~10.2.5",
+    "@nguniversal/express-engine": "^10.1.0",
     "@ngx-translate/core": "^12.0.0",
     "@ngx-translate/http-loader": "^4.0.0",
-    "@swimlane/ngx-charts": "^11.0.0",
+    "@swimlane/ngx-charts": "^16.0.0",
     "angular-oauth2-oidc": "^8.0.4",
     "express": "^4.15.2",
     "hammerjs": "^2.0.8",
     "moment": "2.22.2",
     "ng": "0.0.0",
     "ng-recaptcha": "^6.1.0",
-    "ng-recaptcha-dynamic-language": "^1.0.1",
-    "ngx-markdown": "^8.2.2",
-    "ngx-matomo": "^0.1.4",
+    "ngx-markdown": "^10.1.1",
+    "ngx-matomo": "^1.0.0-rc.1",
     "ngx-translate": "0.0.1-security",
     "rxjs": "~6.6.7",
     "serve": "^13.0.2",
-    "toco-lib": "0.0.7",
-    "tslib": "^1.10.0",
+    "tslib": "^2.5.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular-devkit/build-ng-packagr": "~0.901.15",
-    "@angular/cli": "^9.1.15",
-    "@angular/compiler-cli": "~9.1.13",
-    "@angular/language-service": "~9.1.13",
+    "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular-devkit/build-ng-packagr": "~0.1002.4",
+    "@angular/cli": "^10.2.4",
+    "@angular/compiler-cli": "~10.2.5",
+    "@angular/language-service": "~10.2.5",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.3.8",
@@ -73,14 +70,13 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^9.1.5",
+    "ng-packagr": "^10.1.2",
     "protractor": "~5.4.0",
     "source-map-explorer": "^2.5.2",
     "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
-    "tsickle": "^0.38.1",
     "tslint": "~5.15.0",
-    "typescript": "~3.8.3",
+    "typescript": "~4.0.8",
     "webpack-cli": "^3.1.0"
   },
   "optionalDependencies": {
