--- a/package.json
+++ b/package.json
@@ -15,63 +15,63 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^10.2.4",
-    "@angular-devkit/schematics": "^10.2.4",
-    "@angular/animations": "~10.2.5",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "~10.2.5",
-    "@angular/compiler": "~10.2.5",
-    "@angular/core": "~10.2.5",
-    "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "~10.2.5",
-    "@angular/localize": "^10.2.5",
-    "@angular/material": "^10.2.7",
+    "@angular-devkit/core": "^11.2.19",
+    "@angular-devkit/schematics": "^11.2.19",
+    "@angular/animations": "~11.2.14",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "~11.2.14",
+    "@angular/compiler": "~11.2.14",
+    "@angular/core": "~11.2.14",
+    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/forms": "~11.2.14",
+    "@angular/localize": "^11.2.14",
+    "@angular/material": "^11.2.13",
     "@angular/material-moment-adapter": "^10.2.7",
-    "@angular/platform-browser": "~10.2.5",
-    "@angular/platform-browser-dynamic": "~10.2.5",
-    "@angular/platform-server": "~10.2.5",
-    "@angular/router": "~10.2.5",
-    "@nguniversal/express-engine": "^10.1.0",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/platform-server": "~11.2.14",
+    "@angular/router": "~11.2.14",
+    "@nguniversal/express-engine": "^11.2.1",
     "@ngx-translate/core": "^12.0.0",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-charts": "^16.0.0",
     "angular-oauth2-oidc": "^8.0.4",
     "express": "^4.15.2",
-    "hammerjs": "^2.0.8",
+    "i": "^0.3.7",
     "moment": "2.22.2",
     "ng": "0.0.0",
     "ng-recaptcha": "^6.1.0",
     "ngx-markdown": "^10.1.1",
     "ngx-matomo": "^1.0.0-rc.1",
     "ngx-translate": "0.0.1-security",
+    "npm": "^9.6.2",
     "rxjs": "~6.6.7",
     "serve": "^13.0.2",
-    "tslib": "^2.5.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.4",
-    "@angular-devkit/build-ng-packagr": "~0.1002.4",
-    "@angular/cli": "^10.2.4",
-    "@angular/compiler-cli": "~10.2.5",
-    "@angular/language-service": "~10.2.5",
+    "@angular-devkit/build-angular": "~0.1102.19",
+    "@angular/cli": "^11.2.19",
+    "@angular/compiler-cli": "~11.2.14",
+    "@angular/language-service": "~11.2.14",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@types/express": "^4.17.0",
-    "@types/jasmine": "~3.3.8",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "angular-in-memory-web-api": "^0.11.0",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^6.0.0",
     "gzipper": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "^6.2.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^10.1.2",
-    "protractor": "~5.4.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^11.2.4",
+    "protractor": "~7.0.0",
     "source-map-explorer": "^2.5.2",
     "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
