--- a/package.json
+++ b/package.json
@@ -11,50 +11,47 @@
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
     "serve:ssr": "node dist/server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
-    "build:client-and-server-bundles": "ng build --prod && ng run sceiba-ng:server:production --bundleDependencies all"
+    "build:client-and-server-bundles": "ng build --configuration production && ng run sceiba-ng:server:production --bundleDependencies all"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^11.2.19",
-    "@angular-devkit/schematics": "^11.2.19",
-    "@angular/animations": "~11.2.14",
-    "@angular/cdk": "^11.2.13",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.2.14",
-    "@angular/localize": "^11.2.14",
-    "@angular/material": "^11.2.13",
-    "@angular/material-moment-adapter": "^10.2.7",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/platform-server": "~11.2.14",
-    "@angular/router": "~11.2.14",
-    "@nguniversal/express-engine": "^11.2.1",
+    "@angular-devkit/core": "^12.2.18",
+    "@angular-devkit/schematics": "^12.2.18",
+    "@angular/animations": "~12.2.17",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "~12.2.17",
+    "@angular/compiler": "~12.2.17",
+    "@angular/core": "~12.2.17",
+    "@angular/flex-layout": "^12.0.0-beta.35",
+    "@angular/forms": "~12.2.17",
+    "@angular/localize": "^12.2.17",
+    "@angular/material": "^12.2.13",
+    "@angular/material-moment-adapter": "^12.2.13",
+    "@angular/platform-browser": "~12.2.17",
+    "@angular/platform-browser-dynamic": "~12.2.17",
+    "@angular/platform-server": "~12.2.17",
+    "@angular/router": "~12.2.17",
+    "@nguniversal/express-engine": "^12.1.3",
     "@ngx-translate/core": "^12.0.0",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-charts": "^16.0.0",
     "angular-oauth2-oidc": "^8.0.4",
     "express": "^4.15.2",
-    "i": "^0.3.7",
     "moment": "2.22.2",
-    "ng": "0.0.0",
-    "ng-recaptcha": "^6.1.0",
-    "ngx-markdown": "^10.1.1",
-    "ngx-matomo": "^1.0.0-rc.1",
+    "ng-recaptcha": "^7.0.2",
+    "ngx-markdown": "^12.1.0",
+    "ngx-matomo": "1.0.0",
     "ngx-translate": "0.0.1-security",
-    "npm": "^9.6.2",
     "rxjs": "~6.6.7",
     "serve": "^13.0.2",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.19",
-    "@angular/cli": "^11.2.19",
-    "@angular/compiler-cli": "~11.2.14",
-    "@angular/language-service": "~11.2.14",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular/cli": "^12.2.18",
+    "@angular/compiler-cli": "~12.2.17",
+    "@angular/language-service": "~12.2.17",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
@@ -70,13 +67,13 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.2.4",
+    "ng-packagr": "^12.2.7",
     "protractor": "~7.0.0",
     "source-map-explorer": "^2.5.2",
     "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~4.0.8",
+    "tslint": "~6.1.3",
+    "typescript": "~4.3.5",
     "webpack-cli": "^3.1.0"
   },
   "optionalDependencies": {
