--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^13.3.11",
-    "@angular-devkit/schematics": "^13.3.11",
-    "@angular/animations": "~13.3.12",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "~13.3.12",
-    "@angular/compiler": "~13.3.12",
-    "@angular/core": "~13.3.12",
+    "@angular-devkit/core": "^14.2.11",
+    "@angular-devkit/schematics": "^14.2.11",
+    "@angular/animations": "^14.3.0",
+    "@angular/cdk": "^14.2.7",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
     "@angular/flex-layout": "^12.0.0-beta.35",
-    "@angular/forms": "~13.3.12",
-    "@angular/localize": "^13.3.12",
-    "@angular/material": "^13.3.9",
-    "@angular/material-moment-adapter": "^13.3.9",
-    "@angular/platform-browser": "~13.3.12",
-    "@angular/platform-browser-dynamic": "~13.3.12",
-    "@angular/platform-server": "~13.3.12",
-    "@angular/router": "~13.3.12",
-    "@nguniversal/express-engine": "^13.1.1",
+    "@angular/forms": "^14.3.0",
+    "@angular/localize": "^14.3.0",
+    "@angular/material": "^14.2.7",
+    "@angular/material-moment-adapter": "^14.2.7",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/platform-server": "^14.3.0",
+    "@angular/router": "^14.3.0",
+    "@nguniversal/express-engine": "^14.2.3",
     "@ngx-translate/core": "^12.0.0",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-charts": "^16.0.0",
@@ -48,10 +48,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.11",
-    "@angular/cli": "^13.3.11",
-    "@angular/compiler-cli": "~13.3.12",
-    "@angular/language-service": "~13.3.12",
+    "@angular-devkit/build-angular": "^14.2.11",
+    "@angular/cli": "^14.2.11",
+    "@angular/compiler-cli": "^14.3.0",
+    "@angular/language-service": "^14.3.0",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
@@ -67,7 +67,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^13.3.1",
+    "ng-packagr": "^14.2.2",
     "protractor": "~7.0.0",
     "source-map-explorer": "^2.5.2",
     "ts-loader": "^5.2.0",
