success migration to v15

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sceiba-ng",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -15,66 +16,69 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^14.2.11",
-    "@angular-devkit/schematics": "^14.2.11",
-    "@angular/animations": "^14.3.0",
-    "@angular/cdk": "^14.2.7",
-    "@angular/common": "^14.3.0",
-    "@angular/compiler": "^14.3.0",
-    "@angular/core": "^14.3.0",
-    "@angular/flex-layout": "^12.0.0-beta.35",
-    "@angular/forms": "^14.3.0",
-    "@angular/localize": "^14.3.0",
-    "@angular/material": "^14.2.7",
-    "@angular/material-moment-adapter": "^14.2.7",
-    "@angular/platform-browser": "^14.3.0",
-    "@angular/platform-browser-dynamic": "^14.3.0",
-    "@angular/platform-server": "^14.3.0",
-    "@angular/router": "^14.3.0",
-    "@nguniversal/express-engine": "^14.2.3",
-    "@ngx-translate/core": "^12.0.0",
+    "@angular-devkit/core": "^15.2.4",
+    "@angular-devkit/schematics": "^15.2.4",
+    "@angular/animations": "^15.2.4",
+    "@angular/cdk": "^15.2.4",
+    "@angular/common": "^15.2.4",
+    "@angular/compiler": "^15.2.4",
+    "@angular/core": "^15.2.4",
+    "@angular/flex-layout": "15.0.0-beta.42",
+    "@angular/forms": "^15.2.4",
+    "@angular/localize": "^15.2.4",
+    "@angular/material": "^15.2.4",
+    "@angular/material-moment-adapter": "^15.2.4",
+    "@angular/platform-browser": "^15.2.4",
+    "@angular/platform-browser-dynamic": "^15.2.4",
+    "@angular/platform-server": "^15.2.4",
+    "@angular/router": "^15.2.4",
+    "@nguniversal/express-engine": "^15.2.0",
+    "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-charts": "^16.0.0",
     "angular-oauth2-oidc": "^8.0.4",
     "express": "^4.15.2",
+    "marked": "^4.3.0",
     "moment": "2.22.2",
-    "ng-recaptcha": "^7.0.2",
-    "ngx-markdown": "^12.1.0",
-    "ngx-matomo": "1.0.0",
+    "ng-recaptcha": "11.0.0",
+    "ngx-markdown": "15.1.2",
+    "ngx-matomo": "^1.1.0",
     "ngx-translate": "0.0.1-security",
     "rxjs": "~6.6.7",
     "serve": "^13.0.2",
+    "toco-lib": "^0.0.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.11",
-    "@angular/cli": "^14.2.11",
-    "@angular/compiler-cli": "^14.3.0",
-    "@angular/language-service": "^14.3.0",
+    "@angular-devkit/build-angular": "^15.2.4",
+    "@angular/cli": "^15.2.4",
+    "@angular/compiler-cli": "^15.2.4",
+    "@angular/language-service": "^15.2.4",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/marked": "^4.0.8",
+    "@types/node": "^18.15.10",
     "angular-in-memory-web-api": "^0.11.0",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^6.0.2",
     "gzipper": "^5.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.2.0",
+    "karma": "^6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^14.2.2",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "ng-packagr": "^15.2.2",
     "protractor": "~7.0.0",
     "source-map-explorer": "^2.5.2",
     "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.6.4",
-    "webpack-cli": "^3.1.0"
+    "typescript": "~4.9.5",
+    "webpack-cli": "^5.0.1"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.2"
