--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "serve": "^13.0.2",
     "toco-lib": "^0.0.7",
     "tslib": "^2.0.0",
+    "util": "^0.12.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -56,7 +57,9 @@
     "@angular/compiler-cli": "^15.2.4",
     "@angular/language-service": "^15.2.4",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
+    "@ngtools/webpack": "^15.2.5",
     "@types/express": "^4.17.0",
+    "@types/express-serve-static-core": "^4.17.33",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/marked": "^4.0.8",
@@ -78,6 +81,7 @@
     "ts-node": "~7.0.0",
     "tslint": "~6.1.3",
     "typescript": "~4.9.5",
+    "webpack": "^5.78.0",
     "webpack-cli": "^5.0.1"
   },
   "optionalDependencies": {
