--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sceiba-ng",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "ng": "ng",
@@ -33,17 +33,17 @@
     "@angular/platform-server": "^15.2.4",
     "@angular/router": "^15.2.4",
     "@nguniversal/express-engine": "^15.2.0",
-    "@ngx-translate/core": "^14.0.0",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "@swimlane/ngx-charts": "^16.0.0",
-    "angular-oauth2-oidc": "^8.0.4",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
+    "@swimlane/ngx-charts": "^20.4.1",
+    "angular-oauth2-oidc": "^15.0.1",
     "express": "^4.15.2",
     "marked": "^4.3.0",
     "moment": "2.22.2",
     "ng-recaptcha": "11.0.0",
-    "ngx-markdown": "15.1.2",
+    "ngx-markdown": "^16.0.0",
     "ngx-matomo": "^1.1.0",
-    "ngx-translate": "0.0.1-security",
+    "ngx-translate": "^0.0.1-security",
     "rxjs": "~6.6.7",
     "serve": "^13.0.2",
     "toco-lib": "^0.0.7",
