--- a/angular.json
+++ b/angular.json
@@ -126,7 +126,8 @@
             "main": "src/main.server.ts",
             "tsConfig": "tsconfig.server.json",
             "sourceMap": true,
-            "optimization": false
+            "optimization": false,
+            "buildOptimizer": false
           },
           "configurations": {
             "production": {
@@ -140,7 +141,8 @@
               "optimization": {
                 "scripts": false,
                 "styles": true
-              }
+              },
+              "buildOptimizer": true
             }
           },
           "defaultConfiguration": ""
