--- a/package.json
+++ b/package.json
@@ -16,27 +16,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^15.2.4",
-    "@angular-devkit/schematics": "^15.2.4",
-    "@angular/animations": "^15.2.4",
-    "@angular/cdk": "^15.2.4",
-    "@angular/common": "^15.2.4",
-    "@angular/compiler": "^15.2.4",
-    "@angular/core": "^15.2.4",
+    "@angular-devkit/core": "^16.2.6",
+    "@angular-devkit/schematics": "^16.2.6",
+    "@angular/animations": "^16.2.9",
+    "@angular/cdk": "^16.2.8",
+    "@angular/common": "^16.2.9",
+    "@angular/compiler": "^16.2.9",
+    "@angular/core": "^16.2.9",
     "@angular/flex-layout": "15.0.0-beta.42",
-    "@angular/forms": "^15.2.4",
-    "@angular/localize": "^15.2.4",
-    "@angular/material": "^15.2.4",
-    "@angular/material-moment-adapter": "^15.2.4",
-    "@angular/platform-browser": "^15.2.4",
-    "@angular/platform-browser-dynamic": "^15.2.4",
-    "@angular/platform-server": "^15.2.4",
-    "@angular/router": "^15.2.4",
+    "@angular/forms": "^16.2.9",
+    "@angular/localize": "^16.2.9",
+    "@angular/material": "^16.2.8",
+    "@angular/material-moment-adapter": "^16.2.8",
+    "@angular/platform-browser": "^16.2.9",
+    "@angular/platform-browser-dynamic": "^16.2.9",
+    "@angular/platform-server": "^16.2.9",
+    "@angular/router": "^16.2.9",
     "@nguniversal/express-engine": "^15.2.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@swimlane/ngx-charts": "^20.4.1",
     "angular-oauth2-oidc": "^15.0.1",
+    "angular-oauth2-oidc-jwks": "^15.0.1",
     "express": "^4.15.2",
     "marked": "^4.3.0",
     "moment": "2.22.2",
@@ -46,16 +47,16 @@
     "ngx-translate": "^0.0.1-security",
     "rxjs": "~6.6.7",
     "serve": "^13.0.2",
-    "toco-lib": "^0.0.7",
+    "toco-lib": "^0.0.8",
     "tslib": "^2.0.0",
     "util": "^0.12.5",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.4",
-    "@angular/cli": "^15.2.4",
-    "@angular/compiler-cli": "^15.2.4",
-    "@angular/language-service": "^15.2.4",
+    "@angular-devkit/build-angular": "^16.2.6",
+    "@angular/cli": "^16.2.6",
+    "@angular/compiler-cli": "^16.2.9",
+    "@angular/language-service": "^16.2.9",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@ngtools/webpack": "^15.2.5",
     "@types/express": "^4.17.0",
@@ -74,7 +75,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "ng-packagr": "^15.2.2",
+    "ng-packagr": "^16.2.3",
     "protractor": "~7.0.0",
     "source-map-explorer": "^2.5.2",
     "ts-loader": "^5.2.0",
